# cognitive-execution-engine

./: .env.example  .gitignore  3 个不同框架.md  AGENTS.md  ARCHITECTURE.md  CEE → `image_control_generation`.md  CEE 的“precedent memory + uncertainty router”组合.txt  CLAUDE.md  HANDOFF_PROMPT.md  NEXT_AGENT_START_HERE.md  README.md  RECOVERY_PLAYBOOK.md  TASK_CHECKLIST.md  cee_config.yaml  deep-research-report (6).md  deep-research-report (7).md  handoff_state.json  plan_b_eval_report.md  pyproject.toml  run_plan_b_experiments.py  一条直接这样问我.md  可直接套用的 agent 提示文件模板.md  并行给出 3 个不同框架.md  方案 B .md  最苛刻的评审人.md
docs/: ARCHITECTURE_STATE_FIRST_2026-04-16.md  ARCHITECTURE_THREE_LAYER_MODEL_2026-04-16.md  DOCUMENT_STATUS.md  MVP_SCOPE_2026-04-16.md  PRINCIPLE_BASELINE_2026-04-16.md  PROJECT_CHARTER_2026-04-16.md  PROJECT_SUMMARY_2026-04-17.md  cee_core_axioms.md  migration_plan.md  module_attribution.md  plan_b_scope.md  strict_review_report.md
examples/: demo_document_analysis.py  demo_image_generation.py  e2e_demo.py  e2e_integration_example.py  e2e_real_scenario.py  quality_report_demo.py  reasoning_step_demo.py  stage0_demo.py  workflow_demo.py
experiments/: experiment1_fact_verification.py  experiment2_worldstate_vs_memory.py  experiment3_full_stack_vs_stacked.py
memory_index/: vector_index.json
tests/: README.md  test_ab_testing.py  test_agents_red_lines.py  test_anthropic_compatible_provider.py  test_api_integration.py  test_approval.py  test_approval_gate.py  test_approval_packet.py  test_belief_update.py  test_bridge_persistence.py  test_calibration_v2.py  test_config.py  (+83 more)
(+141 files in other folders)
