[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-execution-engine"
version = "0.1.0"
description = "State-first, policy-guarded cognitive execution engine."
requires-python = ">=3.11"

[project.scripts]
cee = "cee_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
markers = [
    "integration: live integration tests skipped by default unless explicitly enabled",
]
