[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-execution-engine"
version = "0.1.0"
description = "State-first, policy-guarded cognitive execution engine."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.23", "pydantic>=2.0"]
llm = ["openai>=1.0"]
vector = ["numpy>=1.24"]
yaml = ["pyyaml>=6.0"]
all = ["cognitive-execution-engine[api,llm,vector,yaml]"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
cee = "cee_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
markers = [
    "integration: live integration tests skipped by default unless explicitly enabled",
]
